test/error/SymbolUnknown.ci
public class Test
{
	public static bool Run()
	{
		while (x) { //ERROR: x not found
		}
		return true;
	}
}
